--- a/web/styles/globals.scss
+++ b/web/styles/globals.scss
@@ -13,3 +13,11 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
+.background-container {
+  position: absolute;
+  height: 100%;
+  width: 100vw;
+  overflow: hidden;
+  z-index: -1;
+}
